--- a/scss/login.scss
+++ b/scss/login.scss
@@ -14,6 +14,7 @@
     @media(max-width:991px)
     {
         flex-direction: column;
+        height: 100vh;
     }
     .login-left-block
     {
@@ -29,7 +30,7 @@
         @media(max-width:991px)
         {
            width:100%;
-           order: 2;
+           height: 100%;
         }
         @media(max-width:575px)
         {
@@ -261,7 +262,7 @@
         background-size:cover;
         @media(max-width:991px)
         {
-            height: 170px;
+            display:none;
         }
         .login-welcome-txt {
             color: #ffffff;
