--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -195,7 +195,12 @@
         width: 100%;
         column-gap: 27px;
         margin-top: 40px;
-
+        .wallet-btn-inner{
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            width: 100%;
+        }
         .wallet-btn {
             display: flex;
             align-items: center;
@@ -209,13 +214,13 @@
             flex: 1 1 0%;
             height: 64px;
             box-shadow: none;
-
             &:hover,
             &.active {
                 border: 1px solid #292D32;
                 background: #F3F4FA;
                 color: #292D32;
             }
+            
 
             .wallet-icon {
                 border: 1px solid #ddd;
@@ -279,6 +284,16 @@
 .conect-wallet .walles-otr .wallet-btn {
     margin-bottom: 15px;
 }
+.connect-wallet-modal{
+    .btn-cover{
+        margin-top: 35px;
+        width: 100%;
+        text-align: center;
+        .primary-btn{
+            width: 240px;
+        }
+    }
+}
 
 @media(max-width:1679px) {
     .conect-wallet {
@@ -307,13 +322,13 @@
         width: 28px;
         height: 28px;
     }
-    .connect-wallet-modal .btn-cover .primary-button{
+    .connect-wallet-modal .btn-cover .primary-btn{
         font-size: 14px;
         height: 46px;
     }
 }
 @media(max-width:1199px) {
-    .connect-wallet-modal .btn-cover .primary-button{
+    .connect-wallet-modal .btn-cover .primary-btn{
         width: 205px;
     }
 }
@@ -323,6 +338,17 @@
     }
 }
 @media(max-width:767px) {
+    .conect-wallet .walles-otr .wallet-btn-inner{
+        max-width: 100%;
+        width: 160px;
+        text-align: left;
+    }
+    .conect-wallet .walles-otr .wallet-btn{
+        justify-content: center;
+    }
+    .connect-wallet-modal .btn-cover{
+        margin-top: 25px;
+    }
     .conect-wallet .walles-otr {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -339,7 +365,7 @@
         bottom: -90px;
     }
 
-    .connect-wallet-modal .btn-cover .primary-button {
+    .connect-wallet-modal .btn-cover .primary-btn {
         // width: 100%;
         height: 45px;
     }
@@ -353,6 +379,10 @@
     .conect-wallet {
         margin-bottom: 30px;
         padding: 0 35px;
+    }
+    .conect-wallet .walles-otr .wallet-btn{
+        height: 50px;
+        flex: 1 1 auto;
     }
 }
 
@@ -495,3 +525,4 @@
         }
     }
 }
+
