--- a/scss/login.scss
+++ b/scss/login.scss
@@ -94,6 +94,7 @@
                     margin-top:15px;
                     color: #fff;
                     padding: 7px 44px 7px 56px;
+                    box-shadow: none !important;
                     @media(max-width:1679px)
                     {
                         height: 50px;
