--- a/scss/login.scss
+++ b/scss/login.scss
@@ -123,14 +123,16 @@
                         top: 49px;
                     }
                 }
-                img.icon-pass {
+                .icon-pass {
                     position: absolute;
                     right: 18px;
-                    top: 61px;
+                    top: 55px;
                     cursor: pointer;
+                    background: none;
+                    border: none;
                     @media(max-width:1679px)
                     {
-                        top: 54px;
+                        top: 46px;
                     }
                 }
                 
@@ -532,7 +534,9 @@
             {
                 position: absolute;
                 right: 21px;
-                top: 62px;
+                background: none;
+                border: none;
+                top: 54px;
                 @media(max-width:991px)
                 {
                     top: 56px;
