--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -483,3 +483,457 @@
         }
     }
 }
+.stake-modal
+{
+    .modal-header
+    {
+        @media(max-width:1679px)
+        {
+            padding-top: 5px;
+        }
+    }
+    .modal-dialog
+    {
+        max-width: 800px;
+        @media(max-width:1679px)
+        {
+            max-width: 700px;
+        }
+        @media(max-width:991px)
+        {
+            max-width:96%;
+        }
+    }
+    .modal-body
+    {
+        padding: 0px 50px 45px;
+        @media(max-width:1679px)
+        {
+            padding: 0px 45px 28px;
+        }
+        @media(max-width:767px)
+        {
+            padding: 0px 25px 28px;
+        }
+        @media(max-width:767px)
+        {
+            padding: 0px 15px 28px;
+        }
+        .crate-stake-modal-body
+        {
+            .modal-title
+            {
+                h2
+                {
+                    font-size: 22px;
+                    display: flex;
+                    align-items: center;
+                    @media(max-width:1679px)
+                    {
+                        margin-bottom: 20px;
+                        font-size: 18px;
+                    }
+                    @media(max-width:767px)
+                    {
+                        font-size: 16px;
+                    }
+                    @media(max-width:575px)
+                    {
+                        font-size: 15px;
+                    }
+                }
+                img
+                {
+                    background: #F3F4FA;
+                    border-radius: 50px;
+                    padding: 6px;
+                    height: 38px;
+                    margin-right: 8px;
+
+                }
+            }
+        }
+        .lock-period
+        {
+            color: #697F9B;
+            font-weight: 500;
+            font-size: 16px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            @media(max-width:1679px)
+            {
+                font-size: 14px;
+            }
+            @media(max-width:767px)
+            {
+                margin-top: 0px;
+            }
+        }
+        .input-group {
+            position: relative;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: stretch;
+            width: 100%;
+            margin-top:25px;
+            
+            .form-control
+            {
+                border: 1px solid #B4BFCD;
+                border-radius: 50px !important;
+                height: 60px;
+                padding: 20px;
+                font-size:14px;
+                @media(max-width:1679px)
+                {
+                    height: 50px;
+                }
+            }
+            .badges {
+                position: absolute;
+                right: 2px;
+                display: flex;
+                top: 9px;
+                cursor: pointer;
+                z-index:9;
+                @media(max-width:1679px)
+                {
+                    top: 6px;
+                }
+                @media(max-width:575px)
+                {
+                    top: 9px;
+                }
+                .num-badge {
+                    border-radius: 25px;
+                    background: #EFF0F9;
+                    padding: 9px 28px;
+                    margin-right: 8px;
+                    font-size: 14px;
+                    font-weight: 500;
+                    z-index: 99;
+                    @media(max-width:1679px)
+                    {
+                        font-size: 13px;
+                        padding: 9px 21px;
+                    }
+                    @media(max-width:575px)
+                    {
+                        padding: 6px 15px;
+                        font-size: 11px;
+                        margin-right: 4px;
+                    }
+                }
+                .max-active
+                {
+                    background: #0DAD4D;
+                    color:#fff;
+                }
+            }
+        }
+        .rwd-inner {
+            margin-top: 25px;
+            margin-bottom: 18px;
+            @media(max-width:1679px)
+            {
+                margin-top: 15px;
+                margin-bottom: 18px;
+            }
+            .detail-outer {
+                margin-bottom: 20px;
+                display:flex;
+                .props-col
+                {
+                    color: #FF5050;
+                }
+                @media(max-width:1679px)
+                {
+                    margin-bottom: 16px;
+                }
+                img
+                {
+                    margin-right:5px;
+                }
+                span
+                {
+                    color: #697F9B;
+                    font-size: 16px;
+                    font-weight: 500;
+                    @media(max-width:1679px)
+                    {
+                        font-size: 13px;
+                    }
+                }
+              
+            }
+        }
+        .pool-cap-txt
+        {
+            @media(max-width:991px)
+            {
+                margin-top: 20px;
+            }
+            .pool-label
+            {
+                font-weight: 600;
+                font-size: 16px;
+                @media(max-width:1679px)
+                {
+                    font-size: 13px;
+                }
+            }
+            .pool-cont
+            {
+                font-weight: 600;
+                font-size: 20px;
+                @media(max-width:1679px)
+                {
+                    font-size: 16px;
+                }
+            }
+        }
+        .progress-bar-section {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 8px;
+            margin-bottom: 15px;
+            .progress-count {
+                color:$success-green;
+                font-weight: 600;
+                font-size: 15px;
+                @media(max-width:1679px)
+                {
+                    font-size: 13px;
+                }
+            }
+        }
+        .btn-outer
+        {
+            display:flex;
+            @media(max-width:450px)
+            {
+                flex-direction: column;
+            }
+        }
+        .btn-stake
+        {
+            border-radius: 24px;
+            background: #0DAD4D;
+            color: #fff;
+            display: inline-block;
+            width: 100%;
+            height: 52px;
+            text-align: center;
+            line-height: 48px;
+            text-decoration: none;
+            @media(max-width:1679px)
+            {
+                height: 50px;
+                font-size:14px;
+            }
+        }
+        .withdraw-btn
+        {
+            background: #DFAB45;
+        }
+        .btn-default
+        {
+            border-radius: 28px;
+            border: 1px solid $border-grey-1;
+            font-size: 15px;
+            font-weight: 500;
+            width: 47%;
+            padding: 9px;
+            background: #fff;
+            margin-right: 10px;
+            height: 50px;
+            @media(max-width:1679px)
+            {
+                font-size: 13px;
+                height: 45px;
+            }
+            @media(max-width:450px)
+            {
+                width: 100%;
+                margin-bottom: 13px;
+                margin-right: 0;
+            }
+        }
+        .policy-stake {
+            border-radius: 12px;
+            background: #FFF6E1;
+            margin-top: 30px;
+            padding: 20px 22px;
+            @media(max-width:1679px)
+            {
+                margin-top: 20px;
+            }
+            @media(max-width:575px)
+            {
+                margin-top: 13px;
+            }
+            .head-policy {
+                color: #8B7645;
+                font-weight: 600;
+                font-size: 14px;
+                display: flex;
+                align-items: center;
+                margin-bottom: 15px;
+                @media(max-width:1679px)
+                {
+                    font-size: 12px;
+                    margin-bottom:10px;
+                }
+                img
+                {
+                    margin-right: 9px;
+                    height: 15px;
+                    margin-top: -1px;
+
+                }
+            }
+            .policy-text
+            {
+                color: #85744C;
+                font-weight: 400;
+                font-size: 12px;
+                @media(max-width:1679px)
+                {
+                    font-size: 11px;
+                }
+            }
+        }
+    }
+}
+.success-modal
+{
+    .modal-dialog
+    {
+        max-width: 700px;
+        @media(max-width:765px)
+        {
+            max-width:96%;
+        }
+    }
+    .modal-body
+    {
+        padding: 15px 50px 55px;
+        @media(max-width:575px)
+        {
+            padding: 15px 20px 35px;
+        }
+        .modal-title
+        {
+            text-align: center;
+            img
+            {
+                height: 65px;
+                margin-bottom: 15px;
+                @media(max-width:1679px)
+                {
+                    height: 55px;
+                }
+            }
+            h2
+            {
+                color: #292D32;
+                font-size: 21px;
+                font-weight: 600;
+                margin-bottom: 8px;
+                @media(max-width:1679px)
+                {
+                    font-size: 19px;
+                }
+                @media(max-width:575px)
+                {
+                    font-size: 16px;
+                }
+            }
+            h5
+            {
+                color: #697F9B;
+                font-size: 18px;
+                font-weight: 400;
+                @media(max-width:1679px)
+                {
+                    font-size: 15px;
+                }
+                @media(max-width:1679px)
+                {
+                    font-size: 14px;
+                }
+            }
+        }
+        .stake-detail {
+            border: 1px solid #E3E4F3;
+            padding: 20px 15px;
+            border-radius: 10px;
+            margin-top: 30px;
+            .stake-amt {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 10px;
+                color: #697F9B;
+                @media(max-width:575px)
+                {
+                    flex-direction: column;
+                }
+                .stake-amt-txt {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-bottom: 10px;
+                    color: #697F9B;
+                    font-weight: 400;
+                    font-size: 14px;
+                    @media(max-width:1679px)
+                    {
+                        font-size: 13px;
+                    }
+                    @media(max-width:575px)
+                    {
+                        margin-bottom: 0;
+                    }
+                }
+                .stake-rupees {
+                    color: #292D32;
+                    font-weight: 600;
+                    font-size: 14px;
+                    word-break: break-word;
+                    @media(max-width:1679px)
+                    {
+                        font-size: 13px;
+                    }
+                }
+            }
+        }
+    }
+    
+}
+.btn-black
+{
+    border-radius: 24px;
+    background: #292D32;
+    color: #fff;
+    height: 48px;
+    min-width: 232px;
+    margin-top: 17px;
+    @media(max-width:575px)
+    {
+        height: 45px;
+        min-width: 210px;
+    }
+}
+.fail-modal
+{
+    .modal-dialog {
+        max-width: 550px;
+        @media(max-width:765px)
+        {
+            max-width:96%;
+        }
+    }
+    .btn-black
+    {
+        margin-top: 25px;
+    }
+}
