--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -525,4 +525,135 @@
         }
     }
 }
-
+.success-modal
+{
+    .modal-dialog
+    {
+        max-width: 700px;
+        @media(max-width:765px)
+        {
+            max-width:96%;
+        }
+    }
+    .modal-body
+    {
+        padding: 15px 50px 55px;
+        @media(max-width:575px)
+        {
+            padding: 15px 20px 35px;
+        }
+        .modal-title
+        {
+            text-align: center;
+            img
+            {
+                height: 65px;
+                margin-bottom: 15px;
+                @media(max-width:1679px)
+                {
+                    height: 55px;
+                }
+            }
+            h2
+            {
+                color: #292D32;
+                font-size: 21px;
+                font-weight: 600;
+                margin-bottom: 8px;
+                @media(max-width:1679px)
+                {
+                    font-size: 19px;
+                }
+                @media(max-width:575px)
+                {
+                    font-size: 16px;
+                }
+            }
+            h5
+            {
+                color: #697F9B;
+                font-size: 18px;
+                font-weight: 400;
+                @media(max-width:1679px)
+                {
+                    font-size: 15px;
+                }
+                @media(max-width:1679px)
+                {
+                    font-size: 14px;
+                }
+            }
+        }
+        .stake-detail {
+            border: 1px solid #E3E4F3;
+            padding: 20px 15px;
+            border-radius: 10px;
+            margin-top: 30px;
+            .stake-amt {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 10px;
+                color: #697F9B;
+                @media(max-width:575px)
+                {
+                    flex-direction: column;
+                }
+                .stake-amt-txt {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-bottom: 10px;
+                    color: #697F9B;
+                    font-weight: 400;
+                    font-size: 14px;
+                    @media(max-width:1679px)
+                    {
+                        font-size: 13px;
+                    }
+                    @media(max-width:575px)
+                    {
+                        margin-bottom: 0;
+                    }
+                }
+                .stake-rupees {
+                    color: #292D32;
+                    font-weight: 600;
+                    font-size: 14px;
+                    word-break: break-word;
+                    @media(max-width:1679px)
+                    {
+                        font-size: 13px;
+                    }
+                }
+            }
+        }
+    }
+    
+}
+.btn-black
+{
+    border-radius: 24px;
+    background: #292D32;
+    color: #fff;
+    height: 48px;
+    min-width: 232px;
+    margin-top: 17px;
+    @media(max-width:575px)
+    {
+        height: 45px;
+        min-width: 210px;
+    }
+}
+.fail-modal
+{
+    .modal-dialog {
+        max-width: 550px;
+        @media(max-width:765px)
+        {
+            max-width:96%;
+        }
+    }
+    .btn-black
+    {
+        margin-top: 25px;
+    }
+}
