--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -291,6 +291,7 @@
         text-align: center;
         .primary-btn{
             width: 240px;
+            background-color: $primary-dark;
         }
     }
 }
