--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -292,6 +292,8 @@
         .primary-btn{
             width: 240px;
             background-color: $primary-dark;
+            color: #fff;
+            border: none;
         }
     }
 }
