--- a/css/modal.css
+++ b/css/modal.css
@@ -230,7 +230,9 @@
   text-align: center; }
   .connect-wallet-modal .btn-cover .primary-btn {
     width: 240px;
-    background-color: #292D32; }
+    background-color: #292D32;
+    color: #fff;
+    border: none; }
 
 @media (max-width: 1679px) {
   .conect-wallet {
