--- a/css/header.css
+++ b/css/header.css
@@ -356,7 +356,19 @@
 
   .header-wrapper .right-block .buy-btn {
     width: auto; } }
+@media (max-width: 1300px) {
+  .header-wrapper .header-title-block .live-active .label-web {
+    display: none; } }
 @media (max-width: 1199px) {
+  .header-wrapper .wallet-btn-cover-web .wallet-btn-connected {
+    min-width: 135px; }
+
+  .header-wrapper .right-block .notify-dropdown .notify-btn {
+    width: 40px; }
+
+  .header-wrapper .right-block .my-acc-dropdown .my-acc-btn {
+    width: 150px; }
+
   .header-wrapper .header-title-block .live-active .status {
     margin-right: 5px; }
 
@@ -377,12 +389,12 @@
     margin-left: 5px; }
 
   .header-wrapper .wallet-btn, .header-wrapper .login-btn {
-    padding: 8px 10px; }
+    padding: 6px 10px; }
 
   .header-wrapper .header-title-block {
     flex: 1 1 auto;
     padding-right: 15px; } }
-@media (max-width: 991px) {
+@media (max-width: 1100px) {
   .header-wrapper .right-block .notify-dropdown .notify-btn {
     width: 36px;
     height: 36px; }
@@ -397,11 +409,8 @@
     .header-wrapper .right-block .my-acc-dropdown .my-acc-btn img {
       width: 100%; }
     .header-wrapper .right-block .my-acc-dropdown .my-acc-btn::after {
-      display: none; }
-
-  .header-wrapper .header-title-block .live-active .label-web {
-    display: none; }
-
+      display: none; } }
+@media (max-width: 991px) {
   .header-wrapper .right-block .notify-dropdown .dropdown-menu {
     width: 340px; }
 
