--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -640,6 +640,10 @@
     height: 48px;
     min-width: 232px;
     margin-top: 17px;
+    @media(max-width:1679px)
+    {
+        font-size: 15px;
+    }
     @media(max-width:575px)
     {
         height: 45px;
@@ -658,5 +662,35 @@
     .btn-black
     {
         margin-top: 25px;
+    }
+}
+
+
+.logout-modal{
+    .btn-block{
+        .btn-black.btn-border{
+            background-color: #fff;
+            color: $primary-dark;
+            margin-right: 8px;
+        }
+        @media(max-width:1679px) {
+            .btn-black{
+                min-width: auto;
+                width: 180px;
+            }
+        }
+        @media(max-width:767px) {
+            .btn-black{
+                width: 150px;
+            }
+        }
+        @media(max-width:400px) {
+            justify-content: space-between;
+            flex-wrap: nowrap;
+            display: flex;
+            .btn-black{
+                width: calc(50% - 4px);
+            }
+        }
     }
 }
