--- a/css/modal.css
+++ b/css/modal.css
@@ -628,6 +628,12 @@
   height: 48px;
   min-width: 232px;
   margin-top: 17px;
+  font-size: 15px;
+}
+@media (max-width: 1679px) {
+  .btn-black {
+    font-size: 14px;
+  }
 }
 @media (max-width: 575px) {
   .btn-black {
@@ -646,6 +652,78 @@
 }
 .fail-modal .btn-black {
   margin-top: 25px;
+}
+
+.vesting-confirm .modal-dialog {
+  max-width: 600px;
+}
+@media (max-width: 765px) {
+  .vesting-confirm .modal-dialog {
+    max-width: 96%;
+  }
+}
+.vesting-confirm .modal-body .modal-title h4 {
+  font-size: 20px;
+  font-weight: 700;
+  width: 366px;
+  margin: 0 auto;
+  line-height: 29px;
+}
+@media (max-width: 1679px) {
+  .vesting-confirm .modal-body .modal-title h4 {
+    font-size: 18px;
+    line-height: 26px;
+    width: 320px;
+  }
+}
+@media (max-width: 450px) {
+  .vesting-confirm .modal-body .modal-title h4 {
+    font-size: 16px;
+    line-height: 24px;
+    width: 100%;
+  }
+}
+.vesting-confirm .modal-body .btn-otr {
+  margin-top: 19px;
+}
+.vesting-confirm .modal-body .btn-otr .btn-black {
+  width: 48%;
+  min-width: auto;
+}
+@media (max-width: 575px) {
+  .vesting-confirm .modal-body .btn-otr .btn-black {
+    width: 45%;
+  }
+}
+@media (max-width: 355px) {
+  .vesting-confirm .modal-body .btn-otr .btn-black {
+    width: 100%;
+  }
+}
+.vesting-confirm .modal-body .btn-otr .btn-cancel {
+  border-radius: 24px;
+  border: 1px solid #000;
+  background: #FFF;
+  width: 48%;
+  height: 48px;
+  margin-right: 10px;
+  font-size: 15px;
+}
+@media (max-width: 1679px) {
+  .vesting-confirm .modal-body .btn-otr .btn-cancel {
+    font-size: 14px;
+  }
+}
+@media (max-width: 575px) {
+  .vesting-confirm .modal-body .btn-otr .btn-cancel {
+    height: 45px;
+    width: 45%;
+  }
+}
+@media (max-width: 355px) {
+  .vesting-confirm .modal-body .btn-otr .btn-cancel {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=modal.css.map */
