--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -638,10 +638,16 @@
     height: 48px;
     min-width: 232px;
     margin-top: 17px;
+    font-size: 15px;
+    @media(max-width:1679px)
+    {
+        font-size: 14px;
+    }
     @media(max-width:575px)
     {
         height: 45px;
         min-width: 210px;
+      
     }
 }
 .fail-modal
@@ -657,4 +663,84 @@
     {
         margin-top: 25px;
     }
+}
+.vesting-confirm
+{
+    .modal-dialog
+    {
+        max-width: 600px;
+        @media(max-width:765px)
+        {
+            max-width: 96%;
+        }
+    }
+    .modal-body
+    {
+        .modal-title
+        {
+            h4
+            {
+
+                font-size: 20px;
+                font-weight: 700;
+                width: 366px;
+                margin: 0 auto;
+                line-height: 29px;
+                @media(max-width:1679px)
+                {
+                    font-size: 18px;
+                    line-height: 26px;
+                    width: 320px;
+                }
+                @media(max-width:450px)
+                {
+                    font-size: 16px;
+                    line-height: 24px;
+                    width: 100%;
+                }
+            }
+        }
+        .btn-otr
+        {
+            margin-top: 19px;
+            .btn-black {
+                width: 48%;
+                min-width:auto;
+                @media(max-width:575px)
+                {
+                    width: 45%;
+                }
+                @media(max-width:355px)
+                {
+                    width: 100%;
+                }
+                
+            }
+            
+            .btn-cancel
+            {
+                border-radius: 24px;
+                border: 1px solid #000;
+                background: #FFF;
+                width: 48%;
+                height:48px;
+                margin-right: 10px;
+                font-size: 15px;
+                @media(max-width:1679px)
+                {
+                    font-size: 14px;
+                }
+                @media(max-width:575px)
+                {
+                    height:45px;
+                    width: 45%;
+                }
+                @media(max-width:355px)
+                {
+                    width: 100%;
+                }
+            }
+        }
+    }
+   
 }
