--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -640,16 +640,10 @@
     height: 48px;
     min-width: 232px;
     margin-top: 17px;
-<<<<<<< HEAD
     font-size: 15px;
     @media(max-width:1679px)
     {
         font-size: 14px;
-=======
-    @media(max-width:1679px)
-    {
-        font-size: 15px;
->>>>>>> dc5340635d42acbe0809e4b03dd77c39a7933725
     }
     @media(max-width:575px)
     {
@@ -672,7 +666,6 @@
         margin-top: 25px;
     }
 }
-<<<<<<< HEAD
 .vesting-confirm
 {
     .modal-dialog
@@ -751,8 +744,7 @@
             }
         }
     }
-   
-=======
+}
 
 
 .logout-modal{
@@ -782,5 +774,4 @@
             }
         }
     }
->>>>>>> dc5340635d42acbe0809e4b03dd77c39a7933725
 }
