--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -773,3 +773,197 @@
         }
     }
 }
+.change-pass-modal
+{
+    .modal-dialog {
+        max-width:600px !important;
+        font-family:$font-primary;
+        @media(max-width:991px)
+        {
+            max-width: 96% !important;
+        }
+
+        .modal-content
+        {
+            padding: 54px;
+            border-radius: 25px;
+            @media(max-width:575px)
+            {
+                padding: 20px;
+            }
+            @media(max-width:350px)
+            {
+                padding:10px;
+            }
+        }
+        .modal-header
+        {
+            border-bottom: 0;
+            padding-bottom: 0;
+            @media(max-width:575px)
+            {
+                padding-left: 0;
+            }
+            .close
+            {
+                position: absolute;
+                right: 14px;
+                top: 20px;
+            }
+            .heading-top {
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+                @media(max-width:575px)
+                {
+                    flex-direction: column;
+                }
+                .header-sec
+                {
+                    @media(max-width:575px)
+                    {
+                        order: 2;
+                    }
+                }
+                .modal-title
+                {
+                    font-size: 20px;
+                    font-weight: 300;
+                    margin-bottom: 3px;
+                    @media(max-width:991px)
+                    {
+                        font-size: 18px;
+                        margin-top: 16px;
+                    }
+                    span
+                    {
+                        font-weight: 600;
+                    }
+                }
+                h5
+                {
+                    font-size: 12px;
+                    color: #292D32;
+                    padding-right: 15px;
+                }
+                .icon-sec
+                {
+                    img
+                    {
+                        height: 150px;
+                        margin-top: -42px;
+                        @media(max-width:991px)
+                        {
+                            height: 130px;
+                        }
+                        @media(max-width:575px)
+                        {
+                            height: 115px;
+                            margin-top: -10px;
+                        }
+                    }
+                }
+            }
+        }
+        .modal-body
+        {
+            padding-top: 0;
+            .form-group
+            {
+                @media(max-width:575px)
+                {
+                    padding-top:15px;
+                }
+                .input-group
+                {
+                    flex-direction: column;
+                    margin-bottom:20px;
+                    label
+                    {
+                        color: #697F9B;
+                        font-size: 14px;
+                    }
+                    .form-control
+                    {
+                        width: 100%;
+                        background: transparent;
+                        border: 1px solid #5E6C84;
+                        border-radius: 50px !important;
+                        height: 60px;
+                        margin-top: 11px;
+                        color: #333;
+                        padding-left: 53px;
+                        @media(max-width:1679px)
+                        {
+                            height: 55px;
+                        }
+                        @media(max-width:991px)
+                        {
+                            height: 50px;
+                        }
+                    }
+                    .fgt-mail-icon
+                    {
+                        position: absolute;
+                        top: 52px;
+                        left: 22px;
+                        @media(max-width:1679px)
+                        {
+                            top: 49px;
+                        }
+                        @media(max-width:991px)
+                        {
+                            top: 47px;
+                        }
+                    }
+                    .fgt-view-icon
+                    {
+                        position: absolute;
+                        right: 21px;
+                        background: none;
+                        border: none;
+                        top: 48px;
+                        @media(max-width:1679px)
+                        {
+                            top: 45px;
+                        }
+                        @media(max-width:991px)
+                        {
+                            top: 43px;
+                        }
+                    }
+                }
+                .btn-otr
+                {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-top: 40px;
+                    @media(max-width:575px)
+                    {
+                        margin-top: 25px;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                  
+                    .send-btn
+                    {
+                        background: #292D32;
+                        font-size: 16px;
+                        color: #fff;
+                        height: 52px;
+                        padding: 15px 15px;
+                        min-width: 155px;
+                        border-radius: 50px;
+                        width: 100%;
+                        @media(max-width:575px)
+                        {
+
+                            margin-bottom: 17px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
